--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1317,7 +1317,7 @@ figcaption, .wp-block-image figcaption, .wp-block-embed figcaption{
 	font-weight: 300;
 	line-height: 180%;
 
-	strong{
+	strong, b{
 		font-weight: 600;
 	}
 
