--- a/style.css
+++ b/style.css
@@ -10113,7 +10113,7 @@ figcaption, .wp-block-image figcaption, .wp-block-embed figcaption {
   font-size: 1.125rem;
   font-weight: 300;
   line-height: 180%; }
-  .entry-content strong, .entry-content p strong {
+  .entry-content strong, .entry-content b, .entry-content p strong, .entry-content p b {
     font-weight: 600; }
 
 .site-footer {
@@ -11394,8 +11394,6 @@ body #youmax, body .youmax {
         -o-transition: transform 0.4s cubic-bezier(0.15, 0.53, 0.35, 1);
         transition: transform 0.4s cubic-bezier(0.15, 0.53, 0.35, 1);
         transition: transform 0.4s cubic-bezier(0.15, 0.53, 0.35, 1), -webkit-transform 0.4s cubic-bezier(0.15, 0.53, 0.35, 1); }
-  .gallery-embed .gallery-items {
-    display: none; }
   .gallery-embed:hover .gallery-embed-inside .gallery-embed-content p .icon {
     color: #f6c200; }
   .gallery-embed:hover a {
@@ -11407,6 +11405,9 @@ body #youmax, body .youmax {
     transform: scale(1.04); }
   .gallery-embed.alignleft.block-narrow {
     margin-right: 0; }
+
+.gallery-items {
+  display: none; }
 
 .video-embed {
   position: relative;
